--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                         <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
                     </button>
-                    <a class="navbar-brand page-scroll" href="#page-top">Malika Raynal</a>
+                    <a class="navbar-brand page-scroll"  style="color:#F8FAFF" href="#page-top">Malika Raynal</a>
                 </div>
 
                 <!-- Collect the nav links, forms, and other content for toggling -->
@@ -278,7 +278,7 @@
                                 <img src="https://placehold.it/350x150" class="img-responsive" alt="">
                             </a>
                             <div class="portfolio-caption">
-                                <h4>Dreams</h4>
+                                <h4>Text</h4>
                                 <p class="text-muted">Website Design</p>
                             </div>
                         </div>
@@ -406,7 +406,7 @@
                                         <div class="clearfix"></div>
                                         <div class="col-lg-12 text-center">
                                             <div id="success"></div>
-                                            <button type="submit" class="btn btn-xl">Send Message</button>
+                                            <button  style="color:#F8FAFF"type="submit" class="btn btn-xl">Envoyer le Message</button>
                                         </div>
                                     </div>
                                 </form>
@@ -614,11 +614,11 @@
                                     <div class="modal-body">
                                         <!-- Project Details Go Here -->
                                         <h2>Droit du travail</h2>
-                                        <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
+                                     <!--    <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
                                         <img class="img-responsive img-centered" src="img/portfolio/dreams-preview.png" alt="">
                                         <p>Dreams is a free PSD web template built by <a href="https://www.behance.net/MathavanJaya">Mathavan Jaya</a>. Dreams is a modern one page web template designed for almost any purpose. It’s a beautiful template that’s designed with the Bootstrap framework in mind.</p>
-                                        <p>You can download the PSD template in this portfolio sample item at <a href="http://freebiesxpress.com/gallery/dreams-free-one-page-web-template/">FreebiesXpress.com</a>.</p>
-                                        <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
+                                        <p>You can download the PSD template in this portfolio sample item at <a href="http://freebiesxpress.com/gallery/dreams-free-one-page-web-template/">FreebiesXpress.com</a>.</p> -->
+                                        <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close</button> 
                                     </div>
                                 </div>
                             </div>
